// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collect BodyNavButton helpers composes alignment classnames correctly for LEFT alignment 1`] = `"Collection-align-left"`;

exports[`Collect BodyNavButton helpers composes alignment classnames correctly for RIGHT alignment 1`] = `"Collection-align-right"`;

exports[`Collect BodyNavButton helpers composes icon classname correctly for LEFT alignment 1`] = `"fas fa-angle-left"`;

exports[`Collect BodyNavButton helpers composes icon classname correctly for RIGHT alignment 1`] = `"fas fa-angle-right"`;

exports[`Collect BodyNavButton helpers composes icon container classname correctly when active 1`] = `"Collection-body-nav-button-icon active"`;

exports[`Collect BodyNavButton helpers composes icon container classname correctly when not active 1`] = `"Collection-body-nav-button-icon"`;

exports[`Collect BodyNavButton snapshots renders with orientation LEFT correctly 1`] = `
<div
  className="Collection-body-nav-button Collection-align-left"
  onClick={[MockFunction]}
>
  <div
    className="Collection-body-nav-button-icon"
  >
    <i
      className="fas fa-angle-left"
    />
  </div>
</div>
`;

exports[`Collect BodyNavButton snapshots renders with orientation RIGHT correctly 1`] = `
<div
  className="Collection-body-nav-button Collection-align-right"
  onClick={[MockFunction]}
>
  <div
    className="Collection-body-nav-button-icon"
  >
    <i
      className="fas fa-angle-right"
    />
  </div>
</div>
`;
